# jira-extractor

./: .gitignore  Makefile  README.md  jira_extractor_script.py  main.py  pyproject.toml  requirements.txt  run_jira_extractor.bat
.github/workflows/: semgrep.yml
jira_extractor/: jira_extractor_script.py
jira_extractor/config/: logger.py
jira_extractor/core/: converter.py  extractor.py  processor.py
jira_extractor/utils/: confluence.py  confluence_helper.py  file_utils.py  link_handlers.py
